# plaudio

./: .gitignore  CHECKLIST-RELEASE.md  CONTRIBUTING.md  MARKETING.md  README.md  STACK.md  audit-allowed-terms.txt  pyproject.toml
examples/: quickstart.md
src/plaudio/: __init__.py
src/plaudio/cli/: main.py
src/plaudio/cli/commands/: __init__.py  clean.py  db.py  doctor.py  enrol.py  label.py  match.py  plaud.py  transcribe.py  voicebank.py
src/plaudio/core/: __init__.py  clean.py  corpus.py  diarise.py  ffmpeg.py  slidingmatch.py  transcribe.py  voicebank.py
src/plaudio/plaud/: __init__.py  cloud.py
tests/: test_boundaries.py  test_clean.py  test_cli_enrol.py  test_cli_version.py  test_cli_voicebank.py  test_corpus.py  test_defaults_empty.py  test_diarise.py  test_doctor.py  test_integration.py  test_label_helpers.py  test_plaud_cloud.py  test_slidingmatch.py  test_transcribe.py  test_voicebank.py
tests/fixtures/: CONSENT-LOG.md
